# daniilubica.github.io

./: .gitattributes  Cargo.toml  README.md  database.html  escape_from_bobrovo.html  index.html  mematrica.html  people_vs_undeads.html  txt_process.html
docs/: index.html
pages/: index.html
src/: lib.rs
static/js/: project_page.js  show_projects.js
static/styles/: button.css  header.css  proj_block.css  style.css  under_button_text.css
